# cpp-roster

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
proto/: roster.proto
src/: cli.cpp  cli.h  database.cpp  database.h  http_server.cpp  http_server.h  main.cpp  person.h  proto_io.cpp  proto_io.h  roster_manager.cpp  roster_manager.h
tests/: README.md
web/: app.js  index.html  style.css
